Add all content to index.html file

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 
   <article class="grid">
     <div class="unit">
-      <p>The greatest</p>
-      <p>enemy</p>
-      <p>of knowledge is</p>
-      <p>not</p>
-      <p>ignorance.</p>
-      <p>It is the</p>
-      <p>illusion</p>
-      <p>of knowledge.</p>
-      <cite>Stephen Hawking</cite>
+      <p class="white-text">The greatest</p>
+      <p class="archivo">ENEMY</p>
+      <p class="white-text">of knowledge is</p>
+      <p class="archivo">NOT</p>
+      <p class="white-text">ignorance.</p>
+    </div>
+
+    <div class="unit">
+      <p class="white-text">The greatest <span class="archivo">ENEMY</span> of knowledge is <span class="archivo">NOT</span> ignorance. It is the <span class="archivo">ILLUSION</span> of knowledge.</p>
+      <cite class="white-text">Stephen Hawking</cite>
     </div>
   </article>
 
