Define grid sizes

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 </head>
 <body>
 
-<main>
+<main class="island">
 
-  <article class="grid">
-    <div class="unit">
-      <p class="white-text">The greatest</p>
-      <p class="archivo">ENEMY</p>
-      <p class="white-text">of knowledge is</p>
-      <p class="archivo">NOT</p>
-      <p class="white-text">ignorance.</p>
+  <article class="grid pad-t giga">
+    <div class="unit gutter">
+      <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">The greatest</p>
+      <p class="allcaps unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ENEMY</p>
+      <p class="white-text unit-xs-1 unit-s-1 unit-m-1 unit unit-l-hidden">of knowledge is</p>
+      <p class="allcaps unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">NOT</p>
+      <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ignorance.</p>
+      <p class="white-text unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">...</p>
     </div>
 
-    <div class="unit">
-      <p class="white-text">The greatest <span class="archivo">ENEMY</span> of knowledge is <span class="archivo">NOT</span> ignorance. It is the <span class="archivo">ILLUSION</span> of knowledge.</p>
-      <cite class="white-text">Stephen Hawking</cite>
+    <div class="unit gutter push">
+      <p class="white-text unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1">The greatest <span class="allcaps">ENEMY</span> of knowledge is <span class="allcaps">NOT</span> ignorance. It is the <span class="allcaps fade">ILLUSION</span> of knowledge.</p>
+      <cite class="white-text mega unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1">Stephen Hawking</cite>
     </div>
   </article>
 
