Fix transition in opacity

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 </head>
 <body>
 
-<main class="island">
+  <main class="island">
 
-  <article class="grid pad-t giga">
-    <div class="unit gutter">
-      <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">The greatest</p>
-      <p class="allcaps unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ENEMY</p>
-      <p class="white-text unit-xs-1 unit-s-1 unit-m-1 unit unit-l-hidden">of knowledge is</p>
-      <p class="allcaps unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">NOT</p>
-      <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ignorance.</p>
-      <p class="white-text unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">...</p>
-    </div>
+    <article class="grid pad-t giga">
+      <div class="unit gutter">
+        <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">The greatest</p>
+        <p class="allcaps unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ENEMY</p>
+        <p class="white-text unit-xs-1 unit-s-1 unit-m-1 unit unit-l-hidden">of knowledge is</p>
+        <p class="allcaps unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">NOT</p>
+        <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ignorance.</p>
+        <p class="white-text unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">...</p>
+      </div>
 
-    <div class="unit gutter push">
-      <p class="white-text unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1">The greatest <span class="allcaps">ENEMY</span> of knowledge is <span class="allcaps">NOT</span> ignorance. It is the <span class="allcaps fade">ILLUSION</span> of knowledge.</p>
-      <cite class="white-text mega unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1">Stephen Hawking</cite>
-    </div>
-  </article>
+      <div class="unit gutter push">
+        <p class="white-text unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1">The greatest <span class="allcaps">ENEMY</span> of knowledge is <span class="allcaps">NOT</span> ignorance. It is the <span class="allcaps opac">ILLUSION</span> of knowledge.</p>
+        <cite class="white-text mega unit-xs-hidden unit-s-hidden unit-m-hidden unit-l-1 text-right">Stephen Hawking</cite>
+      </div>
+    </article>
 
-</main>
+  </main>
 </body>
 </html>
