Change font family of ellipse

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="white-text unit-xs-1 unit-s-1 unit-m-1 unit unit-l-hidden">of knowledge is</p>
         <p class="allcaps unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">NOT</p>
         <p class="white-text unit unit-xs-1 unit-s-1 unit-m-1 unit-l-hidden">ignorance.</p>
-        <p class="white-text unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">...</p>
+        <p class="allcaps unit unit-xs-hidden unit-s-hidden unit-m-1 unit-l-hidden">...</p>
       </div>
 
       <div class="unit gutter push">
