--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>The Enemy of Knowledge</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
-  <link href="css/module.css" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Pompiere" rel="stylesheet">
